--- a/cell03/ex04/ex01bis/balloon.html
+++ b/cell03/ex04/ex01bis/balloon.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Balloon</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <style>
       body {
         display: flex;
@@ -24,7 +30,7 @@
   <body>
     <div class="balloon"></div>
     <script>
-      const balloon = document.querySelector(".balloon");
+      const balloon = $(".balloon");
       let size = 200;
       const colorList = ["red", "green", "blue"];
       let colorIndex = 0;
@@ -35,27 +41,30 @@
         } else {
           size += 10;
         }
-        colorIndex++;
-        balloon.style.width = size + "px";
-        balloon.style.height = size + "px";
-        balloon.style.backgroundColor = colorList[colorIndex % 3];
+        colorIndex = (colorIndex + 1) % 3;
+        balloon.css({
+          width: size + "px",
+          height: size + "px",
+          "background-color": colorList[colorIndex],
+        });
       };
+
       const removeSize = () => {
         if (size <= 200) {
           size = 200;
         } else {
           size -= 5;
         }
-        colorIndex--;
-        if (colorIndex < 0) {
-          colorIndex = 2;
-        }
-        balloon.style.width = size + "px";
-        balloon.style.height = size + "px";
-        balloon.style.backgroundColor = colorList[colorIndex % 3];
+        colorIndex = (colorIndex - 1 + 3) % 3;
+        balloon.css({
+          width: size + "px",
+          height: size + "px",
+          "background-color": colorList[colorIndex],
+        });
       };
-      balloon.addEventListener("click", addSize);
-      balloon.addEventListener("mouseleave", removeSize);
+
+      balloon.on("click", addSize);
+      balloon.on("mouseleave", removeSize);
     </script>
   </body>
 </html>
