--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <style>
       * {
         margin: 0;
@@ -106,12 +112,12 @@
     </div>
 
     <script>
-      const form = document.querySelector("form");
-      form.addEventListener("submit", (e) => {
+      const form = $("form");
+      form.on("submit", function (e) {
         e.preventDefault();
-        const num1 = form.num1.value;
-        const num2 = form.num2.value;
-        const operator = form.operator.value;
+        const num1 = form[0].num1.value;
+        const num2 = form[0].num2.value;
+        const operator = form[0].operator.value;
         let result;
         if (
           num1 < 0 ||
@@ -125,7 +131,6 @@
           console.log("Error :(");
           return;
         }
-
         switch (operator) {
           case "add":
             result = parseFloat(num1) + parseFloat(num2);
