hotfix(3-4): add log

--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -157,6 +157,7 @@
             break;
         }
         alert(result);
+        console.log(result);
         setInterval(() => {
           alert("Please, use me...");
         }, 30000);
