--- a/cell03/ex02/calc.html
+++ b/cell03/ex02/calc.html
@@ -152,6 +152,7 @@
             break;
         }
         alert(result);
+        console.log(result);
         setInterval(() => {
           alert("Please, use me...");
         }, 30000);
